--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -171,7 +171,7 @@
       <!-- الفلاتر -->
       <div class="filters row justify-content-center no-print">
         <div class="col-md-3 mb-2 text-center">
-          <label class="form-label د-block">الكلية</label>
+          <label class="form-label d-block">الكلية</label>
           <select id="collegeFilter" class="form-select">
             <option value="">جميع الكليات</option>
           </select>
