--- a/public/test.html
+++ b/public/test.html
@@ -72,7 +72,7 @@
     /* أعمدة التاريخ (اتجاه يسار لليمين) */
     #evaluationsTableWrapper th.date-col,
     #evaluationsTableWrapper td.date-col{
-      direction:ltr;text-align:center;width:120px;max-width:120px
+      direction:ltr; text-align:center; width:8%; max-width:none;
     }
 
     /* مساحات معلومات أعلى الجدول */
