--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>نتائج تقييم اللجان</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
+  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
@@ -72,7 +72,7 @@
     /* أعمدة التاريخ (اتجاه يسار لليمين) */
     #evaluationsTableWrapper th.date-col,
     #evaluationsTableWrapper td.date-col{
-      direction:ltr;text-align:center;width:110px;max-width:110px
+      direction:ltr; text-align:center; width:3%; max-width:none;
     }
 
     /* مساحات معلومات أعلى الجدول */
@@ -92,13 +92,13 @@
     /* رسالة "غير متوفر" */
     #notAvailable{min-height:60vh; align-items:center; justify-content:center; text-align:center;}
 
-    /* ==== نسب عرض للأعمدة (شاشة + طباعة) ==== */
+    /* ==== نسب عرض للأعمدة (شاشة) ==== */
     th.col-idx, td.col-idx{width:3.5%}
     th.col-college, td.col-college{width:9%}
     th.col-committee, td.col-committee{width:20%}            /* اسم اللجنة */
     th.col-date, td.col-date{width:8%}
-    th.col-consistency, td.col-consistency{width:13%}        /* التوافق بين الدعوات والاجتماعات (شاشة) */
-    th.col-notes, td[col-notes]{width:22%}                   /* الملاحظات (شاشة) */
+    th.col-consistency, td.col-consistency{width:10%}        /* التوافق بين الدعوات والاجتماعات (شاشة) */
+    th.col-notes, td[col-notes]{width:25%}                   /* الملاحظات (شاشة) */
     /* الحقول الرقمية – نجعلها أضيق */
     th.col-num, td.col-num{width:5%}
 
@@ -131,14 +131,30 @@
       .hline{display:block}        /* كل جزء بسطر مستقل في الطباعة */
       .hline + .hline::before{content:""}
 
-      /* ضبط نسب الأعمدة للطباعة (تقليل التوافق والملاحظات قليلاً) */
-      th.col-committee, td.col-committee{width:20%}
-      th.col-consistency, td.col-consistency{width:11.5%}  /* كانت ~13% */
-      th.col-notes, td[col-notes]{width:20%}               /* كانت ~22% */
-      th.col-num, td.col-num{width:5%}
-      th.col-college, td.col-college{width:9%}
-      th.col-date, td.col-date{width:8%}
+      /* ===== نسب العرض المطلوبة في الطباعة (بالمئة) ===== */
       th.col-idx, td.col-idx{width:3.5%}
+      th.col-college, td.col-college{width:8%}
+      th.col-committee, td.col-committee{width:15%}
+      th.col-date, td.col-date{width:12%}
+
+      th.col-formation_decision, td[data-field="formation_decision"]{width:7%}
+      th.col-work_plan, td[data-field="work_plan"]{width:5%}
+      th.col-performance_indicators, td[data-field="performance_indicators"]{width:7%}
+      th.col-meetings, td[data-field="meetings"]{width:8%}
+
+      th.col-consistency, td.col-consistency{width:9.5%}
+
+      th.col-coverage_books, td[data-field="coverage_books"]{width:7%}
+
+      th.col-report1, td[data-field="report1"]{width:5%}
+      th.col-report2, td[data-field="report2"]{width:5%}
+      th.col-report3, td[data-field="report3"]{width:5%}
+
+      th.col-statistical_analysis, td[data-field="statistical_analysis"]{width:7%}
+
+      #availabilityHeader, td.availability-cell{width:5%}
+
+      th.col-notes, td[col-notes]{width:13%}
 
       /* رأس الجدول يتكرر */
       thead{display:table-header-group}
@@ -149,7 +165,7 @@
       /* إظهار محتوى الملاحظات للطباعة */
       .notes-screen{display:none!important}
       .print-notes{display:block!important;white-space:normal}
-    }
+    } 
   </style>
 </head>
 <body>
@@ -194,10 +210,10 @@
             <input class="form-check-input simple-toggle" type="checkbox" id="toggle_college" checked>
             <label class="form-check-label" for="toggle_college">إظهار الكلية</label>
           </div>
-          <div class="form-check">
+        <!--  <div class="form-check">
             <input class="form-check-input simple-toggle" type="checkbox" id="toggle_date">
             <label class="form-check-label" for="toggle_date">إظهار تاريخ التدقيق</label>
-          </div>
+          </div> -->
           <button class="btn btn-secondary" id="printBtn" title="طباعة"><i class="bi bi-printer"></i></button>
           <button class="btn btn-info" id="reloadBtn" title="إعادة تحميل الإعدادات والجدول"><i class="bi bi-arrow-repeat"></i></button>
         </div>
@@ -339,7 +355,7 @@
       }
     }
 
-    /* ===== تعيين عنوان "Degree of Availability" متعدد الأسطر مع رقم ديناميكي ===== */
+    /* ===== تعيين عنوان "درجة التوفر" متعدد الأسطر مع رقم ديناميكي ===== */
     function renderAvailabilityHeader(n){
       const h = document.getElementById('availabilityHeader');
       h.innerHTML = `
@@ -398,8 +414,8 @@
       const showCollege=document.getElementById('toggle_college').checked;
       document.querySelectorAll('.col-college, td.col-college').forEach(el=>el.classList.toggle('hidden-col',!showCollege));
 
-      const showDate=document.getElementById('toggle_date').checked;
-      document.querySelectorAll('.date-col').forEach(el=>el.classList.toggle('hidden-col',!showDate));
+     /* const showDate=document.getElementById('toggle_date').checked;
+      document.querySelectorAll('.date-col').forEach(el=>el.classList.toggle('hidden-col',!showDate)); */
 
       availabilityFields.forEach(f=>{
         const show = savedVisibleColumns.includes(f);
