--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -133,11 +133,11 @@
         </a>
       </div>
 
-      <!-- ✅ NEW: النسخ الاحنياطية (admin-only) -->
+      <!-- ✅ NEW: النسخ الاحتياطية (admin-only) -->
       <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
         <a href="/cbackups.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-secondary"><i class="bi bi-cloud-arrow-down"></i></div>
-          <h5 class="mt-3">النسخ الاحنياطية</h5>
+          <h5 class="mt-3">النسخ الاحتياطية</h5>
           <p class="mb-0 text-muted">إنشاء واسترجاع نسخ النظام</p>
         </a>
       </div>
