--- a/public/test.html
+++ b/public/test.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <title>إدارة تقييم اللجان - نظام اللجان</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- تم تحديث الـ viewport ليشمل viewport-fit=cover لدعم حواف الأمان على iOS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -61,7 +61,7 @@
     .hidden-col{display:none!important}
 
     /* شريط الإعدادات لم يعد sticky */
-   .sticky-header { background:#fff; padding-top:10px; }
+    .sticky-header{background:#f8f9fa;padding-top:10px}
 
     /* ========= تحسينات تثبيت الترويسة (Sticky) ========= */
     :root{ --table-header-bg:#f8f9fa; }
@@ -122,16 +122,27 @@
     #committeesTable tr:hover > th{
       background-color:#fff6db !important; /* أصفر فاتح */
       transition: background-color .15s ease-in-out;
-      
     }
-/* يجعل أي بلوك يمتد من الحافة للحافة داخل .container/.container-fluid */
-.full-bleed{
-  margin-right: calc(-1 * var(--bs-gutter-x, .75rem)) !important;
-  margin-left:  calc(-1 * var(--bs-gutter-x, .75rem)) !important;
-  width: calc(100% + 2 * var(--bs-gutter-x, .75rem)) !important;
-}
 
-    
+    /* ======== تعديل مخصص للموبايل فقط لتمديد الهيدر للحافة ======== */
+    :root{ --edge-pad: var(--bs-gutter-x, .75rem); }
+    @supports(padding: max(0px)){
+      :root{
+        /* نأخذ الأكبر بين الـ gutter العادي وحواف الأمان على iOS */
+        --edge-pad: max(var(--bs-gutter-x, .75rem), env(safe-area-inset-left), env(safe-area-inset-right));
+      }
+    }
+    /* كلاس يُطبَّق على الهيدر فقط */
+    @media (max-width: 575.98px){
+      .fullBleed-sm{
+        /* نلغي Padding الحاوية على الجانبين بإزاحة سالبة مساوية له */
+        margin-inline: calc(-1 * var(--edge-pad));
+        width: calc(100% + 2 * var(--edge-pad));
+        /* نُعيد padding داخلي لكي لا يلتصق المحتوى بالحافة */
+        padding-inline: var(--edge-pad);
+        background:#fff; /* لتفادي ظهور خلفية الصفحة الرمادية على الأطراف */
+      }
+    }
   </style>
 </head>
 <body>
@@ -144,7 +155,8 @@
 
   <div class="container-fluid page-wrap">
     <!-- Header -->
-    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2 full-bleed bg-white">
+    <!-- تمت إضافة الكلاس fullBleed-sm فقط، ليؤثر على الموبايل دون تغيير سطح المكتب -->
+    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2 fullBleed-sm">
       <h4 class="mb-0">إدارة تقييم اللجان</h4>
       <div class="d-flex align-items-center gap-2">
         <span id="userInfo" class="user-chip badge bg-light text-dark border">
@@ -163,7 +175,7 @@
       </div>
     </div>
 
-    <div class="sticky-header full-bleed bg-white">
+    <div class="sticky-header">
       <!-- الفلاتر -->
       <div class="filters row g-3 mb-3">
         <div class="col-12 col-sm-6 col-lg-4">
@@ -265,7 +277,7 @@
       <div id="completionRateContainer"></div>
 
       <!-- شريط الإجراءات -->
-      <div class="card p-2 mb-2 full-bleed">
+      <div class="card p-2 mb-2">
         <div class="bulk-bar">
           <span class="bulk-title">إجراءات سريعة</span>
           <button class="btn btn-sm btn-primary" id="addRowBtn" title="إضافة سجل جديد">➕ إضافة سجل</button>
