--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>نسخ نظام اللجان الاحتياطية</title>
+  <title>النسخ الاحتياطية - نظام اللجان </title>
   <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
@@ -250,16 +250,21 @@
           JSON.stringify(b.auditors||[]).length +
           JSON.stringify(b.settings||{}).length +
           JSON.stringify(b.committeeFiles||[]).length +
-          JSON.stringify(b.committeeAssignments||[]).length
+          JSON.stringify(b.committeeAssignments||[]).length +
+          /* جديد: المستخدمون + سجل العمليات */
+          JSON.stringify(b.users||[]).length +
+          JSON.stringify(b.auditLogs||[]).length
         ) / 1024;
         totalKB += sizeKB;
 
-        const evN  = (b.evaluations||[]).length;
-        const colN = (b.colleges||[]).length;
-        const dicN = (b.committeesMaster||[]).length;
-        const audN = (b.auditors||[]).length;
-        const cfsN = (b.committeeFiles||[]).length;
-        const asgN = (b.committeeAssignments||[]).length;
+        const evN   = (b.evaluations||[]).length;
+        const colN  = (b.colleges||[]).length;
+        const dicN  = (b.committeesMaster||[]).length;
+        const audN  = (b.auditors||[]).length;
+        const cfsN  = (b.committeeFiles||[]).length;
+        const asgN  = (b.committeeAssignments||[]).length;
+        const usrN  = (b.users||[]).length;          // 👥
+        const logsN = (b.auditLogs||[]).length;      // 🧾
 
         const st  = b.settings || {};
         const when = b.date ? new Date(b.date).toLocaleString('ar-EG',{dateStyle:'full', timeStyle:'short'}) : '—';
@@ -282,6 +287,10 @@
                 👤 المدققون: ${audN} |
                 📎 ملفات اللجان: ${cfsN} |
                 🧩 التعيينات: ${asgN}
+              </div>
+              <div class="details mt-1">
+                👥 المستخدمون: ${usrN} |
+                🧾 سجلّ العمليات: ${logsN}
               </div>
               <div class="details mt-1">
                 ⚙️ الإعدادات:
@@ -318,7 +327,11 @@
     }
 
     async function restoreBackup(id){
-      const ok = await confirmToast({message:'سيتم استرجاع هذه النسخة إلى قاعدة بيانات اللجان.\nلا يمكن التراجع.', confirmText:'نعم، استرجع', cancelText:'إلغاء'});
+      const ok = await confirmToast({
+        message:'سيتم استرجاع هذه النسخة كاملة إلى قاعدة بيانات اللجان، بما في ذلك المستخدمون وسجلّ العمليات.\nلا يمكن التراجع.',
+        confirmText:'نعم، استرجع',
+        cancelText:'إلغاء'
+      });
       if(!ok){ setToast(toastInfo,'تم الإلغاء'); toastInfo.show(); return; }
       showLoading(true);
       try{
