--- a/public/cbackups.html
+++ b/public/cbackups.html
@@ -281,16 +281,16 @@
               </div>
               <div class="text-muted">${when}</div>
               <div class="details mt-1">
-                📝 التقييمات: ${evN} |
-                🏫 الكليات: ${colN} |
-                📚 قاموس اللجان: ${dicN} |
-                👤 المدققون: ${audN} |
-                📎 ملفات اللجان: ${cfsN} |
-                🧩 التعيينات: ${asgN}
+                📝 عدد تقييمات اللجان: ${evN} |
+                🏫 عدد الكليات: ${colN} |
+                📚 عدد اللجان: ${dicN} |
+                👤 عدد المدققون: ${audN} |
+                📎 عدد ملفات اللجان: ${cfsN} |
+                🧩 عدد التعيينات: ${asgN}
               </div>
               <div class="details mt-1">
-                👥 المستخدمون: ${usrN} |
-                🧾 سجلّ العمليات: ${logsN}
+                👥 عدد المستخدون: ${usrN} |
+                🧾 عدد سجلات العمليات: ${logsN}
               </div>
               <div class="details mt-1">
                 ⚙️ الإعدادات:
