--- a/public/committees-login.html
+++ b/public/committees-login.html
@@ -54,14 +54,14 @@
             type="text"
             id="username"
             class="form-control"
-            placeholder="مثال: b01578 أو name@iu.edu.jo"
+            placeholder="مثال: b01578 أو بريد الكتروني"
             autocomplete="username email"
             autocapitalize="none"
             spellcheck="false"
             inputmode="email"
             required
           >
-          <div class="form-text">سجّل دخولك باستخدام اسم المستخدم أو بريدك الإلكتروني.</div>
+       <!--   <div class="form-text">سجّل دخولك باستخدام اسم المستخدم أو بريدك الإلكتروني.</div> -->
           <div class="invalid-feedback">يرجى إدخال اسم المستخدم أو البريد الإلكتروني.</div>
         </div>
 
