--- a/public/test.html
+++ b/public/test.html
@@ -123,7 +123,7 @@
                 <th>أساسية</th>
                 <th class="nowrap">الدعوات</th>
                 <th class="nowrap">المحاضر</th>
-                <th class="nowrap">التغطية</th>
+                <th class="nowrap">كتب التغطية</th>
                 <th>التقارير</th>
                 <th class="nowrap">آخر تحديث</th>
                 <th class="text-center">إجراءات</th>
