--- a/public/committees-files-show.html
+++ b/public/committees-files-show.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>إدارة روابط ملفات اللجان - نظام اللجان</title>
+  <title>إدارة ملفات اللجان - نظام اللجان</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
@@ -28,7 +28,7 @@
   <div class="container">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-3 gap-2">
-      <h4 class="mb-0">إدارة روابط ملفات اللجان</h4>
+      <h4 class="mb-0">إدارة ملفات اللجان</h4>
       <div class="d-flex align-items-center gap-2">
         <span id="userInfo" class="user-chip badge bg-light text-dark border">
           <i class="bi bi-person"></i>
@@ -86,6 +86,25 @@
       </div>
     </div>
 
+    <!-- أدوات تحديد/حذف (جديدة) -->
+    <div class="card mb-3">
+      <div class="card-body d-flex flex-wrap gap-2 align-items-center">
+        <div class="form-check me-3">
+          <input class="form-check-input" type="checkbox" id="checkAll">
+          <label class="form-check-label" for="checkAll">تحديد كل صفوف الصفحة</label>
+        </div>
+
+        <button class="btn btn-outline-secondary" id="btnUncheck"><i class="bi bi-x-square"></i> إلغاء التحديد</button>
+        <button class="btn btn-outline-danger" id="btnDeleteSelected"><i class="bi bi-trash3"></i> حذف المحدد</button>
+
+        <div class="ms-auto d-flex gap-2">
+          <button class="btn btn-danger" id="btnDeleteAllFiltered">
+            <i class="bi bi-exclamation-triangle"></i> حذف كل النتائج (حسب الفلاتر)
+          </button>
+        </div>
+      </div>
+    </div>
+
     <!-- الجدول -->
     <div class="card">
       <div class="card-body p-0">
@@ -93,6 +112,9 @@
           <table class="table align-middle mb-0">
             <thead>
               <tr>
+                <th class="nowrap">
+                  <input type="checkbox" id="thCheckAll">
+                </th>
                 <th class="nowrap">#</th>
                 <th>الكلية</th>
                 <th>اللجنة</th>
@@ -101,7 +123,7 @@
                 <th>أساسية</th>
                 <th class="nowrap">الدعوات</th>
                 <th class="nowrap">المحاضر</th>
-                <th class="nowrap">التغطية</th>
+                <th class="nowrap">كتب التغطية</th>
                 <th>التقارير</th>
                 <th class="nowrap">آخر تحديث</th>
                 <th class="text-center">إجراءات</th>
@@ -113,6 +135,7 @@
         <div class="d-flex justify-content-between align-items-center p-3 border-top flex-wrap gap-2">
           <div>
             <span class="muted">الإجمالي: </span><b id="totalSpan">—</b>
+            <span class="ms-3 muted">المحدد: </span><b id="selectedCount">0</b>
           </div>
           <div class="d-flex align-items-center gap-2">
             <label class="muted">لكل صفحة</label>
@@ -269,6 +292,11 @@
       if(j.user?.isActive===false){ alert('🚫 حسابك معطّل.'); location.href=go('/committees-home.html'); throw 0; }
       CURRENT_USER=j.user; IS_ADMIN = (j.user?.role==='admin'); renderUser(j.user);
       if(!IS_ADMIN){ document.getElementById('deleteBtn').classList.add('d-none'); }
+      // أدوات الحذف الجماعي تتطلب Admin
+      document.getElementById('btnDeleteSelected').disabled = !IS_ADMIN;
+      document.getElementById('btnDeleteAllFiltered').disabled = !IS_ADMIN;
+      document.getElementById('checkAll').disabled = !IS_ADMIN;
+      document.getElementById('thCheckAll').disabled = !IS_ADMIN;
     }
 
     document.getElementById('homeBtn').href=go('/committees-home.html');
@@ -299,13 +327,22 @@
     /* ====== الحالة والفلترة ====== */
     const state={ page:1, limit:20, total:0, items:[], filters:{ college:'', committee_name:'', academicYear:'', term:'' } };
 
+    // تحديد/اختيار على مستوى الصفحة
+    const selectedIds = new Set();
+    function updateSelectedCount(){
+      document.getElementById('selectedCount').textContent = selectedIds.size;
+    }
+
     document.getElementById('limitSelect').addEventListener('change',()=>{ state.limit=parseInt(limitSelect.value||'20',10); state.page=1; loadPage(); });
+
     document.getElementById('applyFiltersBtn').addEventListener('click',()=>{
       state.filters.college=document.getElementById('collegeFilter').value.trim();
       state.filters.committee_name=document.getElementById('committeeFilter').value.trim();
       state.filters.academicYear=document.getElementById('yearFilter').value.trim();
       state.filters.term=document.getElementById('termFilter').value.trim();
-      state.page=1; loadPage();
+      state.page=1; loadPage(); selectedIds.clear(); updateSelectedCount();
+      document.getElementById('checkAll').checked=false;
+      document.getElementById('thCheckAll').checked=false;
     });
     document.getElementById('resetFiltersBtn').addEventListener('click',()=>{
       document.getElementById('collegeFilter').value='';
@@ -313,6 +350,28 @@
       document.getElementById('yearFilter').value='';
       document.getElementById('termFilter').value='';
       state.filters={ college:'', committee_name:'', academicYear:'', term:'' }; state.page=1; loadPage();
+      selectedIds.clear(); updateSelectedCount();
+      document.getElementById('checkAll').checked=false;
+      document.getElementById('thCheckAll').checked=false;
+    });
+
+    // أحداث تحديد الكل
+    document.getElementById('checkAll').addEventListener('change', (e)=>{
+      const boxes = document.querySelectorAll('input.row-check');
+      boxes.forEach(cb => { cb.checked = e.target.checked; cb.dispatchEvent(new Event('change')); });
+      document.getElementById('thCheckAll').checked = e.target.checked;
+    });
+    document.getElementById('thCheckAll').addEventListener('change', (e)=>{
+      const boxes = document.querySelectorAll('input.row-check');
+      boxes.forEach(cb => { cb.checked = e.target.checked; cb.dispatchEvent(new Event('change')); });
+      document.getElementById('checkAll').checked = e.target.checked;
+    });
+
+    document.getElementById('btnUncheck').addEventListener('click', ()=>{
+      selectedIds.clear(); updateSelectedCount();
+      document.querySelectorAll('input.row-check').forEach(cb => cb.checked = false);
+      document.getElementById('checkAll').checked=false;
+      document.getElementById('thCheckAll').checked=false;
     });
 
     /* ====== جلب القائمة ====== */
@@ -325,11 +384,11 @@
         if(f.academicYear) params.set('academicYear',f.academicYear);
         if(f.term) params.set('term',f.term);
         const r=await apiFetch(`/api/committees-files?${params.toString()}`);
-        if(!r.ok){ document.getElementById('rows').innerHTML = `<tr><td colspan="12" class="text-center text-danger py-4">تعذر الجلب (${r.status})</td></tr>`; return; }
+        if(!r.ok){ document.getElementById('rows').innerHTML = `<tr><td colspan="13" class="text-center text-danger py-4">تعذر الجلب (${r.status})</td></tr>`; return; }
         const j=await r.json();
         state.items = Array.isArray(j?.data)? j.data : []; state.total = j?.meta?.total||0;
         renderTable(); renderPager();
-      }catch(e){ console.error(e); document.getElementById('rows').innerHTML = `<tr><td colspan="12" class="text-center text-danger py-4">تعذر الجلب</td></tr>`; }
+      }catch(e){ console.error(e); document.getElementById('rows').innerHTML = `<tr><td colspan="13" class="text-center text-danger py-4">تعذر الجلب</td></tr>`; }
     }
 
     function pill(val,label){
@@ -339,7 +398,7 @@
 
     function renderTable(){
       const tbody=document.getElementById('rows'); tbody.innerHTML='';
-      if(!state.items.length){ tbody.innerHTML = '<tr><td colspan="12" class="text-center py-4">لا توجد نتائج</td></tr>'; }
+      if(!state.items.length){ tbody.innerHTML = '<tr><td colspan="13" class="text-center py-4">لا توجد نتائج</td></tr>'; }
       document.getElementById('totalSpan').textContent = state.total;
 
       state.items.forEach((it,idx)=>{
@@ -350,7 +409,13 @@
         const minCount=Array.isArray(it?.minutes)? it.minutes.length:0;
         const covCount=Array.isArray(it?.coverage_letters)? it.coverage_letters.length:0;
 
+        const rowId = String(it._id);
+        const isChecked = selectedIds.has(rowId);
+
         tr.innerHTML = `
+          <td class="nowrap">
+            <input type="checkbox" class="row-check" data-id="${rowId}" ${isChecked?'checked':''}>
+          </td>
           <td class="nowrap">${(state.page-1)*state.limit + idx + 1}</td>
           <td>${it.college||'—'}</td>
           <td>${it.committee_name||'—'}</td>
@@ -371,11 +436,23 @@
           </td>
         `;
 
+        // إدارة اختيار الصف
+        tr.querySelector('input.row-check').addEventListener('change', (e)=>{
+          if(e.target.checked) selectedIds.add(rowId); else selectedIds.delete(rowId);
+          updateSelectedCount();
+        });
+
         tr.querySelector('[data-action="view"]').addEventListener('click',()=>openEditModal(it,true));
         tr.querySelector('[data-action="edit"]').addEventListener('click',()=>openEditModal(it,false));
         tr.querySelector('[data-action="delete"]').addEventListener('click',()=>confirmDelete(it));
         tbody.appendChild(tr);
       });
+      // مزامنة مربعات تحديد الكل مع حالة الصفحة
+      const boxes = Array.from(document.querySelectorAll('input.row-check'));
+      const allChecked = boxes.length && boxes.every(cb => cb.checked);
+      document.getElementById('checkAll').checked = allChecked;
+      document.getElementById('thCheckAll').checked = allChecked;
+      updateSelectedCount();
     }
 
     function renderPager(){
@@ -538,6 +615,7 @@
         const r=await apiFetch(`/api/committees-files/${it._id}`, { method:'DELETE' });
         if(!r.ok){ const j=await r.json().catch(()=>({})); alert('فشل الحذف: '+(j.message||r.status)); return; }
         toastSuccess.show(); loadPage();
+        selectedIds.delete(String(it._id)); updateSelectedCount();
       }catch(e){ console.error(e); toastError.show(); }
     }
 
@@ -550,6 +628,53 @@
       const el = document.getElementById(targetId);
       if(el && el.value && isValidHttp(el.value)) window.open(el.value,'_blank','noopener');
     });
+
+    /* ====== حذف المحدد / حذف الكل (جديد) ====== */
+    async function deleteSelected(){
+      if(!IS_ADMIN) return;
+      const ids = Array.from(selectedIds);
+      if(ids.length===0){ alert('اختر صفًا واحدًا على الأقل'); return; }
+      if(!confirm(`سيتم حذف ${ids.length} سجل. لا يمكن التراجع. هل أنت متأكد؟`)) return;
+
+      try{
+        const r = await apiFetch('/api/committees-files', {
+          method:'DELETE',
+          headers:{'Content-Type':'application/json'},
+          body: JSON.stringify({ ids })
+        });
+        const j = await r.json().catch(()=>({}));
+        if(!r.ok){ alert('فشل الحذف: '+(j.message||r.status)); return; }
+        selectedIds.clear(); updateSelectedCount();
+        document.getElementById('checkAll').checked=false;
+        document.getElementById('thCheckAll').checked=false;
+        toastSuccess.show(); loadPage();
+      }catch(e){ console.error(e); toastError.show(); }
+    }
+
+    async function deleteAllFiltered(){
+      if(!IS_ADMIN) return;
+      if(!confirm('تحذير: سيتم حذف **كل النتائج** المطابقة للفلاتر الحالية (قد تكون آلاف السجلات). هل تريد المتابعة؟')) return;
+
+      const p = new URLSearchParams();
+      const f=state.filters;
+      if(f.college) p.set('college', f.college);
+      if(f.committee_name) p.set('committee_name', f.committee_name);
+      if(f.academicYear) p.set('academicYear', f.academicYear);
+      if(f.term) p.set('term', f.term);
+
+      try{
+        const r = await apiFetch('/api/committees-files?'+p.toString(), { method:'DELETE' });
+        const j = await r.json().catch(()=>({}));
+        if(!r.ok){ alert('فشل الحذف: '+(j.message||r.status)); return; }
+        selectedIds.clear(); updateSelectedCount();
+        document.getElementById('checkAll').checked=false;
+        document.getElementById('thCheckAll').checked=false;
+        toastSuccess.show(); loadPage();
+      }catch(e){ console.error(e); toastError.show(); }
+    }
+
+    document.getElementById('btnDeleteSelected').addEventListener('click', deleteSelected);
+    document.getElementById('btnDeleteAllFiltered').addEventListener('click', deleteAllFiltered);
 
     /* ====== بدء التشغيل ====== */
     (async function init(){
