--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>إدارة روابط ملفات اللجان - نظام اللجان</title>
+  <title>إدارة ملفات اللجان - نظام اللجان</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
@@ -28,7 +28,7 @@
   <div class="container">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-3 gap-2">
-      <h4 class="mb-0">إدارة روابط ملفات اللجان</h4>
+      <h4 class="mb-0">إدارة ملفات اللجان</h4>
       <div class="d-flex align-items-center gap-2">
         <span id="userInfo" class="user-chip badge bg-light text-dark border">
           <i class="bi bi-person"></i>
@@ -264,6 +264,23 @@
     </div>
   </div>
 
+  <!-- Modal: تأكيد عام (بديل confirm()) -->
+  <div class="modal fade" id="confirmModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 id="confirmTitle" class="modal-title">تأكيد العملية</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="إغلاق"></button>
+        </div>
+        <div class="modal-body" id="confirmBody">هل أنت متأكد؟</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+          <button type="button" class="btn btn-danger" id="confirmOkBtn">تأكيد</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     /* ====== بيئة موحدة ====== */
@@ -278,6 +295,43 @@
     const toastError  =new bootstrap.Toast(document.getElementById('toastError'));
     const apiFetch=(path,opts={})=>fetch(`${API_BASE}${path}`,{credentials:'include',...opts});
 
+    // توست موحّد
+    function showToast(kind, message){
+      const el = (kind==='success') ? document.querySelector('#toastSuccess .toast-body')
+                                    : document.querySelector('#toastError .toast-body');
+      el.textContent = message || (kind==='success' ? 'تمت العملية بنجاح' : 'حدث خطأ');
+      (kind==='success' ? toastSuccess : toastError).show();
+    }
+
+    // مودال تأكيد موحّد (بديل confirm)
+    function askConfirm({title, body, confirmText='تأكيد', confirmClass='btn-danger'} = {}){
+      return new Promise((resolve)=>{
+        const modalEl = document.getElementById('confirmModal');
+        const titleEl = document.getElementById('confirmTitle');
+        const bodyEl  = document.getElementById('confirmBody');
+        const okBtn   = document.getElementById('confirmOkBtn');
+
+        titleEl.textContent = title || 'تأكيد العملية';
+        bodyEl.innerHTML = body || 'هل أنت متأكد؟';
+        okBtn.textContent = confirmText || 'تأكيد';
+        okBtn.className = 'btn ' + (confirmClass || 'btn-danger');
+
+        const bsModal = new bootstrap.Modal(modalEl);
+        const onOk = ()=>{ cleanup(); resolve(true); bsModal.hide(); };
+        const onHidden = ()=>{ cleanup(); resolve(false); };
+
+        function cleanup(){
+          okBtn.removeEventListener('click', onOk);
+          modalEl.removeEventListener('hidden.bs.modal', onHidden);
+        }
+
+        okBtn.addEventListener('click', onOk, { once:true });
+        modalEl.addEventListener('hidden.bs.modal', onHidden, { once:true });
+
+        bsModal.show();
+      });
+    }
+
     /* ====== الجلسة والأدوار ====== */
     let CURRENT_USER=null; let IS_ADMIN=false;
     function renderUser(u){
@@ -288,8 +342,15 @@
     }
     async function ensureAuth(){
       const r=await apiFetch('/auth/committees/me'); const j=await r.json();
-      if(!j?.authenticated){ location.href=go('/committees-login.html?next='+encodeURIComponent('/committees-files-manage.html')); throw 0; }
-      if(j.user?.isActive===false){ alert('🚫 حسابك معطّل.'); location.href=go('/committees-home.html'); throw 0; }
+      if(!j?.authenticated){
+        location.href=go('/committees-login.html?next='+encodeURIComponent('/committees-files-manage.html'));
+        throw 0;
+      }
+      if(j.user?.isActive===false){
+        showToast('error','🚫 حسابك معطّل.');
+        setTimeout(()=>{ location.href=go('/committees-home.html'); }, 900);
+        throw 0;
+      }
       CURRENT_USER=j.user; IS_ADMIN = (j.user?.role==='admin'); renderUser(j.user);
       if(!IS_ADMIN){ document.getElementById('deleteBtn').classList.add('d-none'); }
       // أدوات الحذف الجماعي تتطلب Admin
@@ -304,9 +365,15 @@
     document.getElementById('logoutBtn').addEventListener('click',async()=>{
       try{
         const r=await apiFetch('/auth/committees/logout',{method:'POST',headers:{'Content-Type':'application/json'}});
-        if(r.ok){ toastSuccess.show(); setTimeout(()=>location.href=go('/committees-login.html'),700); }
-        else toastError.show();
-      }catch{ toastError.show(); }
+        if(r.ok){
+          showToast('success','✅ تم تسجيل الخروج');
+          setTimeout(()=>location.href=go('/committees-login.html'),700);
+        } else {
+          showToast('error','تعذّر تسجيل الخروج');
+        }
+      }catch{
+        showToast('error','تعذّر تسجيل الخروج');
+      }
     });
 
     /* ====== قوائم الكليات/اللجان ====== */
@@ -602,21 +669,42 @@
         });
         if(!r.ok){
           const j=await r.json().catch(()=>({}));
-          alert('فشل الحفظ: '+(j.message||r.status));
+          showToast('error','فشل الحفظ: '+(j.message||r.status));
           return;
         }
-        toastSuccess.show(); editModal.hide(); loadPage();
-      }catch(e){ console.error(e); toastError.show(); }
+        showToast('success','✅ تم حفظ التعديلات');
+        editModal.hide(); loadPage();
+      }catch(e){
+        console.error(e);
+        showToast('error','حدث خطأ أثناء الحفظ');
+      }
     }
 
     async function confirmDelete(it){
-      if(!IS_ADMIN) return; if(!confirm('هل أنت متأكد من حذف هذا السجل؟')) return;
+      if(!IS_ADMIN) return;
+
+      const ok = await askConfirm({
+        title:'تأكيد الحذف',
+        body:`سيتم حذف هذا السجل نهائيًا.<br>اللجنة: <b>${it.committee_name||'—'}</b>`,
+        confirmText:'حذف',
+        confirmClass:'btn-danger'
+      });
+      if(!ok) return;
+
       try{
         const r=await apiFetch(`/api/committees-files/${it._id}`, { method:'DELETE' });
-        if(!r.ok){ const j=await r.json().catch(()=>({})); alert('فشل الحذف: '+(j.message||r.status)); return; }
-        toastSuccess.show(); loadPage();
+        if(!r.ok){
+          const j=await r.json().catch(()=>({}));
+          showToast('error','فشل الحذف: '+(j.message||r.status));
+          return;
+        }
+        showToast('success','🗑️ تم حذف السجل');
+        loadPage();
         selectedIds.delete(String(it._id)); updateSelectedCount();
-      }catch(e){ console.error(e); toastError.show(); }
+      }catch(e){
+        console.error(e);
+        showToast('error','حدث خطأ أثناء الحذف');
+      }
     }
 
     document.getElementById('saveModalBtn').addEventListener('click', saveEdit);
@@ -633,8 +721,18 @@
     async function deleteSelected(){
       if(!IS_ADMIN) return;
       const ids = Array.from(selectedIds);
-      if(ids.length===0){ alert('اختر صفًا واحدًا على الأقل'); return; }
-      if(!confirm(`سيتم حذف ${ids.length} سجل. لا يمكن التراجع. هل أنت متأكد؟`)) return;
+      if(ids.length===0){
+        showToast('error','اختر صفًا واحدًا على الأقل');
+        return;
+      }
+
+      const ok = await askConfirm({
+        title:'تأكيد الحذف',
+        body:`سيتم حذف <b>${ids.length}</b> سجل. لا يمكن التراجع.`,
+        confirmText:'حذف',
+        confirmClass:'btn-danger'
+      });
+      if(!ok) return;
 
       try{
         const r = await apiFetch('/api/committees-files', {
@@ -643,17 +741,31 @@
           body: JSON.stringify({ ids })
         });
         const j = await r.json().catch(()=>({}));
-        if(!r.ok){ alert('فشل الحذف: '+(j.message||r.status)); return; }
+        if(!r.ok){
+          showToast('error','فشل الحذف: '+(j.message||r.status));
+          return;
+        }
         selectedIds.clear(); updateSelectedCount();
         document.getElementById('checkAll').checked=false;
         document.getElementById('thCheckAll').checked=false;
-        toastSuccess.show(); loadPage();
-      }catch(e){ console.error(e); toastError.show(); }
+        showToast('success','🗑️ تم حذف السجلات المحددة');
+        loadPage();
+      }catch(e){
+        console.error(e);
+        showToast('error','حدث خطأ أثناء الحذف');
+      }
     }
 
     async function deleteAllFiltered(){
       if(!IS_ADMIN) return;
-      if(!confirm('تحذير: سيتم حذف **كل النتائج** المطابقة للفلاتر الحالية (قد تكون آلاف السجلات). هل تريد المتابعة؟')) return;
+
+      const ok = await askConfirm({
+        title:'تحذير مهم',
+        body:'سيتم حذف <b>كل النتائج</b> المطابقة للفلاتر الحالية (قد تكون آلاف السجلات). هل تريد المتابعة؟',
+        confirmText:'حذف الكل',
+        confirmClass:'btn-danger'
+      });
+      if(!ok) return;
 
       const p = new URLSearchParams();
       const f=state.filters;
@@ -665,12 +777,19 @@
       try{
         const r = await apiFetch('/api/committees-files?'+p.toString(), { method:'DELETE' });
         const j = await r.json().catch(()=>({}));
-        if(!r.ok){ alert('فشل الحذف: '+(j.message||r.status)); return; }
+        if(!r.ok){
+          showToast('error','فشل الحذف: '+(j.message||r.status));
+          return;
+        }
         selectedIds.clear(); updateSelectedCount();
         document.getElementById('checkAll').checked=false;
         document.getElementById('thCheckAll').checked=false;
-        toastSuccess.show(); loadPage();
-      }catch(e){ console.error(e); toastError.show(); }
+        showToast('success','🧹 تم حذف كل النتائج المطابقة');
+        loadPage();
+      }catch(e){
+        console.error(e);
+        showToast('error','حدث خطأ أثناء الحذف الجماعي');
+      }
     }
 
     document.getElementById('btnDeleteSelected').addEventListener('click', deleteSelected);
